# psh

./: .gitignore  Cargo.toml
src/: builtins.rs  cli.rs  error.rs  lib.rs  main.rs  registry.rs  repl.rs  runtime.rs  shell.rs  ui.rs
src/builtins/: admin.rs  format.rs  local.rs  quit.rs  remote.rs
src/error/: builtin.rs  repl.rs  runtime.rs  shell.rs  sync.rs  ui.rs
src/repl/: line.rs  mode.rs  parser.rs  prompt.rs  router.rs
src/runtime/: bootstrap.rs  config.rs  logging.rs
src/shell/: cmd.rs  event.rs  factory.rs  mock.rs  pty.rs  spec.rs
src/ui/: editor.rs  prefix_menu.rs
src/ui/editor/: highlighter.rs  keymap.rs  prompt.rs
