[package]
name = "psh"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
async-trait = "0.1.89"
clap = { version = "4.5.46", features =  ["derive"]}
crossterm = "0.29.0"
directories = "6.0.0"
portable-pty = "0.9.0"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["full"] }
toml = "0.9.5"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
users = "0.11.0"
